--- a/Personal/SwimTeamV1/css/home.css
+++ b/Personal/SwimTeamV1/css/home.css
@@ -1,5 +1,5 @@
 
-.button{
+.button {
     text-align: center;
     font-size: 20px;
     border: none;
@@ -14,113 +14,113 @@
     transition-duration: 0.4s;
 }
 
-.maincontainer>img{
+.maincontainer > img {
     background: white;
     border-radius: 12px;
-    margin-top: 0px;
+    margin-top: 0;
     margin-left: 7px;
-    
+
 }
 
-.buttonsleft{
+.buttonsleft {
     margin-left: auto;
     height: 260px;
     width: 250px;
     float: left;
 }
 
-.margin5{
+.margin5 {
     margin-bottom: 5px;
 }
 
-.buttonsright{
+.buttonsright {
     margin-right: auto;
     height: 260px;
     width: 250px;
-    float: right;  
+    float: right;
 }
 
-.button:hover{
+.button:hover {
     background-color: #645f5f;
     color: white;
 }
 
 
-p{
+p {
     margin-top: 10px;
     margin-bottom: 10px;
     text-align: center;
 }
-h1{
+
+h1 {
     margin-top: 5px;
     text-align: center;
 }
 
 
-@media screen and (max-width: 950px){
+@media screen and (max-width: 950px) {
 
-.maincontainer{
-    width: 750px;
-}
+    .maincontainer {
+        width: 750px;
+    }
 
-.footercontainer{
-   width: 750px;
-}
+    .footercontainer {
+        width: 750px;
+    }
 
-.button{
-    width: 100%;
-    height: 100px;
-}
+    .button {
+        width: 100%;
+        height: 100px;
+    }
 
-.buttonsright{
-    height: 200px;
-    width: 100%;
-    float: none;
-    margin-bottom: 10px;
-}
+    .buttonsright {
+        height: 200px;
+        width: 100%;
+        float: none;
+        margin-bottom: 10px;
+    }
 
-.buttonsleft{
-    height: 200px;
-    width: 100%;
-    float: none;
-    margin-bottom: 10px;
-}
+    .buttonsleft {
+        height: 200px;
+        width: 100%;
+        float: none;
+        margin-bottom: 10px;
+    }
 
-.maincontainer>img{
-    margin-left: 160px;
-}
+    .maincontainer > img {
+        margin-left: 160px;
+    }
 
-@media screen and (max-width: 750px){
-    
-.maincontainer{
-    width: 575px;
-}
+    @media screen and (max-width: 750px) {
 
-.footercontainer{
-   width: 575px;
-}
+        .maincontainer {
+            width: 575px;
+        }
 
-.maincontainer>img{
-    margin-left: 65px;
-}
-    
-}
+        .footercontainer {
+            width: 575px;
+        }
 
-@media screen and (max-width: 575px){
+        .maincontainer > img {
+            margin-left: 65px;
+        }
 
-.maincontainer{
-    margin-top: 300px;
-    width: 100%;
-}
+    }
 
-.footercontainer{
-   width: 100%;
-}
+    @media screen and (max-width: 575px) {
 
-.maincontainer>img{
-    margin-left: 0px;
-    width: 100%;
+        .maincontainer {
+            margin-top: 300px;
+            width: 100%;
+        }
+
+        .footercontainer {
+            width: 100%;
+        }
+
+        .maincontainer > img {
+            margin-left: 0;
+            width: 100%;
+        }
+    }
 }
- 
-}
-    
