--- a/Personal/SwimTeamV1/css/navbar.css
+++ b/Personal/SwimTeamV1/css/navbar.css
@@ -1,13 +1,13 @@
 *{
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     font-family: 'Merriweather Sans', sans-serif;
 }
 #header{
     width: 100%;
     height: 80px;
     background: #645f5f;
-    box-shadow: 0px 2px 4px #645f5f;
+    box-shadow: 0 2px 4px #645f5f;
 }
 
 #navbar{
@@ -50,7 +50,7 @@ li>a:hover{
   
     #navbar{
         width: 840px;
-        height 80px;
+        height: 80px;
         float: right;
     }
     
@@ -64,7 +64,7 @@ li>a:hover{
     #header{
     width: 100%;
     height: 60px;
-    position: relative; top: 0px;
+    position: relative; top: 0;
     }
     
     #navbar{
@@ -102,7 +102,7 @@ li>a:hover{
     
     #navbar{
         width: 100%;
-        height 60px;
+        height: 60px;
         float: none;
     }
     
