--- a/Personal/ColorPicker/css/bootstrap.css
+++ b/Personal/ColorPicker/css/bootstrap.css
@@ -51,6 +51,7 @@ html {
 }
 
 @-ms-viewport {
+  /*noinspection CssInvalidPropertyValue*/
   width: device-width;
 }
 
@@ -2156,6 +2157,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 }
 
 .form-check-inline {
+  /*noinspection CssInvalidPropertyValue*/
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -3280,6 +3282,7 @@ tbody.collapse.show {
 .btn-group,
 .btn-group-vertical {
   position: relative;
+  /*noinspection CssInvalidPropertyValue*/
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -3579,6 +3582,7 @@ tbody.collapse.show {
 }
 
 .custom-control-inline {
+  /*noinspection CssInvalidPropertyValue*/
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -4542,6 +4546,8 @@ tbody.collapse.show {
     margin-right: -15px;
     margin-left: -15px;
   }
+
+  /*noinspection CssRedundantUnit*/
   .card-deck .card {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -4580,6 +4586,8 @@ tbody.collapse.show {
     -ms-flex-flow: row wrap;
     flex-flow: row wrap;
   }
+
+  /*noinspection CssRedundantUnit*/
   .card-group > .card {
     -webkit-box-flex: 1;
     -ms-flex: 1 0 0%;
@@ -6282,6 +6290,7 @@ button.bg-dark:focus {
 }
 
 .d-inline-flex {
+  /*noinspection CssInvalidPropertyValue*/
   display: -webkit-inline-box !important;
   display: -ms-inline-flexbox !important;
   display: inline-flex !important;
@@ -6315,6 +6324,7 @@ button.bg-dark:focus {
     display: flex !important;
   }
   .d-sm-inline-flex {
+    /*noinspection CssInvalidPropertyValue*/
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
     display: inline-flex !important;
@@ -6349,6 +6359,7 @@ button.bg-dark:focus {
     display: flex !important;
   }
   .d-md-inline-flex {
+    /*noinspection CssInvalidPropertyValue*/
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
     display: inline-flex !important;
@@ -6383,6 +6394,7 @@ button.bg-dark:focus {
     display: flex !important;
   }
   .d-lg-inline-flex {
+    /*noinspection CssInvalidPropertyValue*/
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
     display: inline-flex !important;
@@ -6417,6 +6429,7 @@ button.bg-dark:focus {
     display: flex !important;
   }
   .d-xl-inline-flex {
+    /*noinspection CssInvalidPropertyValue*/
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
     display: inline-flex !important;
@@ -6451,6 +6464,7 @@ button.bg-dark:focus {
     display: flex !important;
   }
   .d-print-inline-flex {
+    /*noinspection CssInvalidPropertyValue*/
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
     display: inline-flex !important;
@@ -8863,6 +8877,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-hide {
+  /*noinspection CssInvalidPropertyValue*/
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
