--- a/Personal/SwimTeamV1/css/basic.css
+++ b/Personal/SwimTeamV1/css/basic.css
@@ -60,7 +60,7 @@ h1,h2,h3,h4,h5,h6{
     width: 950px;
     height: auto;
     border: solid #645f5f 3px;
-    box-shadow: 0px 2px 14px #645f5f;
+    box-shadow: 0 2px 14px #645f5f;
     size: 5px;
     text-align: center;
 }
@@ -72,8 +72,8 @@ h1,h2,h3,h4,h5,h6{
     width: 950px;
     height: auto;
     border: solid #645f5f 3px;
-    border-top: 0px;
-    box-shadow: 0px 2px 14px #645f5f;
+    border-top: 0;
+    box-shadow: 0 2px 14px #645f5f;
 }
 
 @media screen and (max-width: 950px){
