--- a/Personal/SwimTeamV2/css/bootstrap.css
+++ b/Personal/SwimTeamV2/css/bootstrap.css
@@ -3971,7 +3971,9 @@ tbody.collapse.show {
   }
 }
 
-   (min-width: 768px) {
+   ( /*noinspection ALL*/
+min-width: 768 /*noinspection ALL*/
+px) {
   .navbar-expand-md {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -4433,6 +4435,8 @@ tbody.collapse.show {
     margin-right: -15px;
     margin-left: -15px;
   }
+
+  /*noinspection CssRedundantUnit*/
   .card-deck .card {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -4471,6 +4475,8 @@ tbody.collapse.show {
     -ms-flex-flow: row wrap;
     flex-flow: row wrap;
   }
+
+  /*noinspection CssRedundantUnit*/
   .card-group > .card {
     -webkit-box-flex: 1;
     -ms-flex: 1 0 0%;
@@ -5117,11 +5123,14 @@ button.list-group-item-primary:hover {
   background-color: #dcdcdc;
 }
 
+/*noinspection ALL*/
 a.list-group-item-primary.active,
 button.list-group-item-primary
   color: #fff;
-  background-color: #004085;
-  border-color: #004085;
+/*noinspection ALL*/
+background-color: #004085;
+/*noinspection ALL*/
+border-color: #004085;
 }
 
 .list-group-item-secondary {
@@ -6220,6 +6229,7 @@ button.bg-dark:hover {
 }
 
 .d-inline-flex {
+  /*noinspection CssInvalidPropertyValue*/
   display: -webkit-inline-box !important;
   display: -ms-inline-flexbox !important;
   display: inline-flex !important;
@@ -6253,6 +6263,7 @@ button.bg-dark:hover {
     display: flex !important;
   }
   .d-sm-inline-flex {
+    /*noinspection CssInvalidPropertyValue*/
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
     display: inline-flex !important;
@@ -6287,6 +6298,7 @@ button.bg-dark:hover {
     display: flex !important;
   }
   .d-md-inline-flex {
+    /*noinspection CssInvalidPropertyValue*/
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
     display: inline-flex !important;
@@ -6321,6 +6333,7 @@ button.bg-dark:hover {
     display: flex !important;
   }
   .d-lg-inline-flex {
+    /*noinspection CssInvalidPropertyValue*/
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
     display: inline-flex !important;
@@ -6355,6 +6368,7 @@ button.bg-dark:hover {
     display: flex !important;
   }
   .d-xl-inline-flex {
+    /*noinspection CssInvalidPropertyValue*/
     display: -webkit-inline-box !important;
     display: -ms-inline-flexbox !important;
     display: inline-flex !important;
@@ -8803,6 +8817,7 @@ a.text-dark:focus, a.text-dark:hover {
 }
 
 .text-hide {
+  /*noinspection CssInvalidPropertyValue*/
   font: 0/0 a;
   color: transparent;
   text-shadow: none;
