--- a/css/vars.css
+++ b/css/vars.css
@@ -1,6 +1,6 @@
 :root {
     --jaden-black: #222831;
-    --jaden-gray: #393E46;
+    --jaden-gray: #4a4c57;
     --jaden-blue: #00ADB5;
     --jaden-white: #EEEEEE;
 }
