--- a/css/main.css
+++ b/css/main.css
@@ -94,6 +94,10 @@ body {
     background-color: var(--jaden-blue);
 }
 
+.spinner-border {
+    color: var(--jaden-blue);
+}
+
 main {
     background-color: var(--jaden-white);
     box-shadow: rgba(0, 0, 0, 1) 0 30px 90px;
