--- a/css/main.css
+++ b/css/main.css
@@ -134,3 +134,7 @@ footer {
 .social-button-link:hover {
     color: var(--jaden-blue);
 }
+
+.text-black {
+    color: var(--jaden-black) !important;
+}
