--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,16 @@ main {
     border-bottom-right-radius: 15px;
 }
 
+#jaden {
+    width: 275px;
+}
+
+@media screen and (max-width: 575px) {
+    #jaden {
+        width: 150px;
+    }
+}
+
 footer {
     background-color: var(--jaden-white);
     border-top-left-radius: 15px;
