--- a/css/main.css
+++ b/css/main.css
@@ -130,11 +130,28 @@ main {
 
 #jaden {
     width: 275px;
+    float: left; !important;
+}
+
+.text-indent {
+    text-indent: 15px;
+}
+
+@media screen and (max-width: 768px) {
+    #jaden {
+        width: 225px;
+    }
 }
 
 @media screen and (max-width: 575px) {
     #jaden {
-        width: 150px;
+        width: 175px;
+    }
+}
+
+@media screen and (max-width: 475px) {
+    #jaden {
+        float: none;
     }
 }
 
