--- a/css/main.css
+++ b/css/main.css
@@ -137,24 +137,7 @@ main {
     text-indent: 15px;
 }
 
-@media screen and (max-width: 768px) {
-    #jaden {
-        width: 225px;
-    }
 
-}
-
-@media screen and (max-width: 575px) {
-    #jaden {
-        width: 175px;
-    }
-}
-
-@media screen and (max-width: 475px) {
-    #jaden {
-        float: none;
-    }
-}
 
 footer {
     background-color: var(--jaden-white);
@@ -231,4 +214,26 @@ footer {
     background-color: rgba(34,40,49, .1);
     padding: 10px;
     border-radius: 10px;
+}
+
+@media screen and (max-width: 768px) {
+    #jaden {
+        width: 225px;
+    }
+    #render {
+        max-width: 70%;
+    }
+
+}
+
+@media screen and (max-width: 575px) {
+    #jaden {
+        width: 175px;
+    }
+}
+
+@media screen and (max-width: 475px) {
+    #jaden {
+        float: none;
+    }
 }
